--- a/src/scss/_partials/_global.scss
+++ b/src/scss/_partials/_global.scss
@@ -40,6 +40,7 @@ textarea {
   width: 100%;
   max-width: var(--content-width);
   padding: 0 var(--spacer-small);
+  margin: 0 auto;
 }
 
 .logo {
